--- a/Blik Mac/GLACollectedFolderStackItemViewController.xib
+++ b/Blik Mac/GLACollectedFolderStackItemViewController.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="GLACollectedFolderStackItemViewController">
             <connections>
-                <outlet property="bottomBarView" destination="GcD-eU-Wtb" id="oMR-zH-sax"/>
                 <outlet property="contentHolderHeightConstraint" destination="M9F-wG-JAp" id="PUW-mT-6Ms"/>
                 <outlet property="contentHolderView" destination="mzD-n5-IlL" id="ZcT-hs-U9R"/>
                 <outlet property="iconImageView" destination="Qol-Zr-N3n" id="ah0-dc-jnG"/>
@@ -23,123 +22,9 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="mzD-n5-IlL" customClass="GLACollectedItemContentHolderView">
-                    <rect key="frame" x="0.0" y="60" width="480" height="75"/>
+                    <rect key="frame" x="0.0" y="20" width="480" height="115"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" id="M9F-wG-JAp"/>
-                    </constraints>
-                </customView>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="GcD-eU-Wtb" customClass="GLAOverlaidBarView">
-                    <rect key="frame" x="0.0" y="20" width="480" height="40"/>
-                    <subviews>
-                        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6kY-Oc-dBE">
-                            <rect key="frame" x="90" y="-40" width="300" height="40"/>
-                            <subviews>
-                                <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="2iv-5m-YHK" customClass="GLAPopUpButton">
-                                    <rect key="frame" x="8" y="8" width="100" height="24"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="100" id="B0B-VG-KUH"/>
-                                        <constraint firstAttribute="height" constant="24" id="nhn-c1-gX4"/>
-                                    </constraints>
-                                    <popUpButtonCell key="cell" type="roundTextured" title="Open in" bezelStyle="texturedRounded" alignment="left" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" pullsDown="YES" selectedItem="lKL-pf-x1P" id="nNb-tf-bid" customClass="GLAPopUpButtonCell">
-                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                        <font key="font" size="13" name="AvenirNext-Medium"/>
-                                        <menu key="menu" id="PN4-DC-any">
-                                            <items>
-                                                <menuItem title="Open in" state="on" hidden="YES" id="lKL-pf-x1P"/>
-                                                <menuItem title="Item 2" id="pSp-b3-0yA"/>
-                                                <menuItem title="Item 3" id="7XW-1u-a07"/>
-                                            </items>
-                                        </menu>
-                                    </popUpButtonCell>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="hasSecondaryStyle" value="YES"/>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetXAmount">
-                                            <integer key="value" value="4"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
-                                            <integer key="value" value="-1"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="leftSpacing">
-                                            <integer key="value" value="4"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </popUpButton>
-                                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Aq-md-70W" customClass="GLAButton">
-                                    <rect key="frame" x="183" y="0.0" width="116" height="40"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="40" id="RKv-xz-8vG"/>
-                                    </constraints>
-                                    <buttonCell key="cell" type="square" title="Add to Highlights" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uMF-Tx-P22" customClass="GLAButtonCell">
-                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                        <font key="font" size="13" name="AvenirNext-Medium"/>
-                                    </buttonCell>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
-                                            <integer key="value" value="-1"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="hasSecondaryStyle" value="YES"/>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetXAmount">
-                                            <integer key="value" value="8"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetYAmount">
-                                            <integer key="value" value="8"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="leftSpacing">
-                                            <integer key="value" value="16"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="rightSpacing">
-                                            <integer key="value" value="16"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </button>
-                                <button translatesAutoresizingMaskIntoConstraints="NO" id="Itw-E6-O9e" customClass="GLAButton">
-                                    <rect key="frame" x="108" y="0.0" width="17" height="40"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="40" id="ciJ-Ok-mc0"/>
-                                    </constraints>
-                                    <buttonCell key="cell" type="square" title="Share" bezelStyle="shadowlessSquare" image="NSShareTemplate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GCY-P1-avq" customClass="GLAButtonCell">
-                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                        <font key="font" size="13" name="AvenirNext-Medium"/>
-                                    </buttonCell>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
-                                            <integer key="value" value="0"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="hasSecondaryStyle" value="YES"/>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetXAmount">
-                                            <integer key="value" value="4"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="backgroundInsetYAmount">
-                                            <integer key="value" value="8"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="leftSpacing">
-                                            <integer key="value" value="13"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="rightSpacing">
-                                            <integer key="value" value="13"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </button>
-                            </subviews>
-                            <constraints>
-                                <constraint firstItem="Itw-E6-O9e" firstAttribute="top" secondItem="6kY-Oc-dBE" secondAttribute="top" id="2Vp-M0-bkX"/>
-                                <constraint firstAttribute="bottom" secondItem="Itw-E6-O9e" secondAttribute="bottom" id="CQX-uJ-kT8"/>
-                                <constraint firstAttribute="centerY" secondItem="2iv-5m-YHK" secondAttribute="centerY" id="Fak-W4-r09"/>
-                                <constraint firstAttribute="width" constant="300" id="OPi-2K-z1p"/>
-                                <constraint firstItem="Itw-E6-O9e" firstAttribute="leading" secondItem="2iv-5m-YHK" secondAttribute="trailing" id="UqD-eR-LSR"/>
-                                <constraint firstItem="4Aq-md-70W" firstAttribute="top" secondItem="6kY-Oc-dBE" secondAttribute="top" id="ZgH-ZF-lUr"/>
-                                <constraint firstItem="2iv-5m-YHK" firstAttribute="leading" secondItem="6kY-Oc-dBE" secondAttribute="leading" constant="8" id="aao-xA-g70"/>
-                                <constraint firstAttribute="height" constant="40" id="eXT-Lx-Saq"/>
-                                <constraint firstAttribute="trailing" secondItem="4Aq-md-70W" secondAttribute="trailing" id="qxu-gt-hle"/>
-                                <constraint firstItem="4Aq-md-70W" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Itw-E6-O9e" secondAttribute="trailing" id="ryI-qT-Fqe"/>
-                            </constraints>
-                        </customView>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="6kY-Oc-dBE" firstAttribute="top" secondItem="GcD-eU-Wtb" secondAttribute="top" id="3dC-Zm-Bcx"/>
-                        <constraint firstAttribute="centerX" secondItem="6kY-Oc-dBE" secondAttribute="centerX" id="VBP-zc-imP"/>
-                        <constraint firstAttribute="height" constant="40" id="mZq-V8-boh"/>
-                        <constraint firstAttribute="bottom" secondItem="6kY-Oc-dBE" secondAttribute="bottom" id="wLV-53-kmS"/>
                     </constraints>
                 </customView>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="ysM-AR-GRG" customClass="GLAOverlaidBarView">
@@ -174,20 +59,13 @@
             <constraints>
                 <constraint firstItem="mzD-n5-IlL" firstAttribute="top" secondItem="ysM-AR-GRG" secondAttribute="bottom" id="0Rq-DP-pBB"/>
                 <constraint firstItem="ysM-AR-GRG" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="4gI-Ig-oNX"/>
-                <constraint firstItem="mzD-n5-IlL" firstAttribute="leading" secondItem="GcD-eU-Wtb" secondAttribute="leading" id="CMo-6w-sKz"/>
                 <constraint firstAttribute="trailing" secondItem="mzD-n5-IlL" secondAttribute="trailing" id="CfF-RF-Neq"/>
-                <constraint firstAttribute="bottom" secondItem="GcD-eU-Wtb" secondAttribute="bottom" constant="20" id="Gbt-1F-VkR"/>
-                <constraint firstItem="GcD-eU-Wtb" firstAttribute="top" secondItem="mzD-n5-IlL" secondAttribute="bottom" id="HD5-OD-Hpg"/>
-                <constraint firstItem="mzD-n5-IlL" firstAttribute="trailing" secondItem="GcD-eU-Wtb" secondAttribute="trailing" id="IOG-Uc-mUF"/>
+                <constraint firstAttribute="bottom" secondItem="mzD-n5-IlL" secondAttribute="bottom" constant="20" id="RL2-JV-aT6"/>
                 <constraint firstAttribute="trailing" secondItem="ysM-AR-GRG" secondAttribute="trailing" id="Rb6-EE-XO3"/>
-                <constraint firstAttribute="centerX" secondItem="GcD-eU-Wtb" secondAttribute="centerX" id="mgP-eG-AQT"/>
                 <constraint firstItem="ysM-AR-GRG" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="u0q-f4-JEO"/>
                 <constraint firstItem="mzD-n5-IlL" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="z2J-TB-RUV"/>
             </constraints>
             <point key="canvasLocation" x="462" y="294.5"/>
         </customView>
     </objects>
-    <resources>
-        <image name="NSShareTemplate" width="11" height="16"/>
-    </resources>
 </document>
